--- a/index.html
+++ b/index.html
@@ -2683,6 +2683,37 @@ img {
 </nav>
 <div class="container container-main">
 	<div class="content-wrap">
+		<div class="tsd-panel tsd-typography">
+			<a href="#sortedindex" id="sortedindex" style="color: inherit; text-decoration: none;">
+				<h3>sortedindex</h3>
+			</a>
+			<p><a href="https://github.com/arcatdmz/sortedIndex/actions?query=workflow%3Anpm-publish"><img src="https://github.com/arcatdmz/sortedIndex/workflows/npm-publish/badge.svg" alt="build"></a>
+			<a href="https://www.npmjs.com/package/sortedindex"><img src="https://img.shields.io/npm/v/sortedindex" alt="npm version"></a></p>
+			<p><strong>sortedindex</strong> is a simple npm package that provides a binary search function for a sorted array.</p>
+			<p><strong>sortedindex</strong> は二分探索を行う関数が入った npm パッケージです。</p>
+			<ul>
+				<li>npm package: <a href="https://www.npmjs.com/package/sortedindex">https://www.npmjs.com/package/sortedindex</a></li>
+				<li>API document: <a href="https://arcatdmz.github.io/sortedIndex/">https://arcatdmz.github.io/sortedIndex/</a></li>
+			</ul>
+			<a href="#usage--使い方" id="usage--使い方" style="color: inherit; text-decoration: none;">
+				<h3>Usage / 使い方</h3>
+			</a>
+			<pre><code class="language-sh"><span style="color: #000000">npm install sortedindex</span>
+</code></pre>
+			<pre><code class="language-typescript"><span style="color: #AF00DB">import</span><span style="color: #000000"> { </span><span style="color: #001080">sortedIndex</span><span style="color: #000000"> } </span><span style="color: #AF00DB">from</span><span style="color: #000000"> </span><span style="color: #A31515">&quot;sortedindex&quot;</span><span style="color: #000000">;</span>
+
+<span style="color: #0000FF">const</span><span style="color: #000000"> </span><span style="color: #0070C1">i1</span><span style="color: #000000"> = </span><span style="color: #795E26">sortedIndex</span><span style="color: #000000">([</span><span style="color: #098658">1</span><span style="color: #000000">,</span><span style="color: #098658">2</span><span style="color: #000000">,</span><span style="color: #098658">4</span><span style="color: #000000">,</span><span style="color: #098658">5</span><span style="color: #000000">], </span><span style="color: #098658">3</span><span style="color: #000000">)</span>
+<span style="color: #0000FF">const</span><span style="color: #000000"> </span><span style="color: #0070C1">i2</span><span style="color: #000000"> = </span><span style="color: #795E26">sortedIndex</span><span style="color: #000000">([</span><span style="color: #A31515">&quot;a&quot;</span><span style="color: #000000">, </span><span style="color: #A31515">&quot;b&quot;</span><span style="color: #000000">, </span><span style="color: #A31515">&quot;c&quot;</span><span style="color: #000000">, </span><span style="color: #A31515">&quot;e&quot;</span><span style="color: #000000">], </span><span style="color: #A31515">&quot;d&quot;</span><span style="color: #000000">, (</span><span style="color: #001080">o</span><span style="color: #000000">) </span><span style="color: #0000FF">=&gt;</span><span style="color: #000000"> </span><span style="color: #001080">o</span><span style="color: #000000">.</span><span style="color: #795E26">charCodeAt</span><span style="color: #000000">(</span><span style="color: #098658">0</span><span style="color: #000000">));</span>
+</code></pre>
+			<a href="#credits--開発者" id="credits--開発者" style="color: inherit; text-decoration: none;">
+				<h3>Credits / 開発者</h3>
+			</a>
+			<ul>
+				<li><a href="https://junkato.jp">Jun Kato</a></li>
+			</ul>
+			<hr>
+			<p>Copyright (c) 2021 Jun Kato</p>
+		</div>
 		<div class="tsd-comment tsd-typography">
 			<div class="lead">
 				<a href="#sortedindex" id="sortedindex" style="color: inherit; text-decoration: none;">
@@ -2730,7 +2761,7 @@ img {
 					<li class="tsd-description">
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in <a href="https://github.com/arcatdmz/sortedIndex/blob/1217034/lib/sortedIndex.ts#L10">sortedIndex.ts:10</a></li>
+								<li>Defined in <a href="https://github.com/arcatdmz/sortedIndex/blob/27c76d2/lib/sortedIndex.ts#L10">sortedIndex.ts:10</a></li>
 							</ul>
 						</aside>
 						<div class="tsd-comment tsd-typography">
