--- a/index.html
+++ b/index.html
@@ -2702,7 +2702,7 @@ img {
 </code></pre>
 			<pre><code class="language-typescript"><span style="color: #AF00DB">import</span><span style="color: #000000"> { </span><span style="color: #001080">sortedIndex</span><span style="color: #000000"> } </span><span style="color: #AF00DB">from</span><span style="color: #000000"> </span><span style="color: #A31515">&quot;sortedindex&quot;</span><span style="color: #000000">;</span>
 
-<span style="color: #0000FF">const</span><span style="color: #000000"> </span><span style="color: #0070C1">i1</span><span style="color: #000000"> = </span><span style="color: #795E26">sortedIndex</span><span style="color: #000000">([</span><span style="color: #098658">1</span><span style="color: #000000">,</span><span style="color: #098658">2</span><span style="color: #000000">,</span><span style="color: #098658">4</span><span style="color: #000000">,</span><span style="color: #098658">5</span><span style="color: #000000">], </span><span style="color: #098658">3</span><span style="color: #000000">)</span>
+<span style="color: #0000FF">const</span><span style="color: #000000"> </span><span style="color: #0070C1">i1</span><span style="color: #000000"> = </span><span style="color: #795E26">sortedIndex</span><span style="color: #000000">([</span><span style="color: #098658">1</span><span style="color: #000000">,</span><span style="color: #098658">2</span><span style="color: #000000">,</span><span style="color: #098658">4</span><span style="color: #000000">,</span><span style="color: #098658">5</span><span style="color: #000000">], </span><span style="color: #098658">3</span><span style="color: #000000">);</span>
 <span style="color: #0000FF">const</span><span style="color: #000000"> </span><span style="color: #0070C1">i2</span><span style="color: #000000"> = </span><span style="color: #795E26">sortedIndex</span><span style="color: #000000">([</span><span style="color: #A31515">&quot;a&quot;</span><span style="color: #000000">, </span><span style="color: #A31515">&quot;b&quot;</span><span style="color: #000000">, </span><span style="color: #A31515">&quot;c&quot;</span><span style="color: #000000">, </span><span style="color: #A31515">&quot;e&quot;</span><span style="color: #000000">], </span><span style="color: #A31515">&quot;d&quot;</span><span style="color: #000000">, (</span><span style="color: #001080">o</span><span style="color: #000000">) </span><span style="color: #0000FF">=&gt;</span><span style="color: #000000"> </span><span style="color: #001080">o</span><span style="color: #000000">.</span><span style="color: #795E26">charCodeAt</span><span style="color: #000000">(</span><span style="color: #098658">0</span><span style="color: #000000">));</span>
 </code></pre>
 			<a href="#credits--開発者" id="credits--開発者" style="color: inherit; text-decoration: none;">
@@ -2713,27 +2713,6 @@ img {
 			</ul>
 			<hr>
 			<p>Copyright (c) 2021 Jun Kato</p>
-		</div>
-		<div class="tsd-comment tsd-typography">
-			<div class="lead">
-				<a href="#sortedindex" id="sortedindex" style="color: inherit; text-decoration: none;">
-					<h1>sortedindex</h1>
-				</a>
-			</div>
-			<ul>
-				<li>二分探索を行う関数が入った npm パッケージ</li>
-				<li>A simple npm package that provides a binary search function for a sorted array</li>
-			</ul>
-			<a href="#使い方--usage" id="使い方--usage" style="color: inherit; text-decoration: none;">
-				<h2>使い方 / Usage</h2>
-			</a>
-			<pre><code class="language-sh"><span style="color: #000000">npm install sortedindex</span>
-</code></pre>
-			<dl class="tsd-comment-tags">
-				<dt>module</dt>
-				<dd><p>sortedindex</p>
-				</dd>
-			</dl>
 		</div>
 		<div style="position:relative;"><a name="typedoc-main-index" class="tsd-anchor"></a></div>
 		<section class="tsd-panel-group tsd-index-group">
@@ -2761,7 +2740,7 @@ img {
 					<li class="tsd-description">
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in <a href="https://github.com/arcatdmz/sortedIndex/blob/c8ca9ce/lib/sortedIndex.ts#L10">sortedIndex.ts:10</a></li>
+								<li>Defined in <a href="https://github.com/arcatdmz/sortedIndex/blob/415e387/lib/sortedIndex.ts#L10">sortedIndex.ts:10</a></li>
 							</ul>
 						</aside>
 						<div class="tsd-comment tsd-typography">
